<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csa_helper</name>
  <version>0.0.1</version>
  <description>Support package defining shared messages and services for CSA project.</description>

  <maintainer email="vscode@todo.todo">vscode</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS Interface Generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Required for msg types used in this package -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Runtime dependency for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>  
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>

</package>
